# logistic_scenario

./: CMakeLists.txt  package.xml  setup.py
launch/: logistic_scenario_app.launch
model/: logistic_scenario.ros_coordinator  logistic_scenario.ros_coordinator_diagram
src/: logistic_scenario_app.py
